[package]
name = "a3"
version = "0.0.0"
authors = ["baihw <78026399@qq.com>"]
edition = "2018"
description = "a3 tools."
documentation = "https://github.com/baihw/a3"
homepage = "https://github.com/baihw/a3"
repository = "https://github.com/baihw/a3.git"
keywords = ["accessibility", "config", "science", "development-tools", "web-programming"]
categories = ["accessibility", "config", "science", "development-tools", "web-programming"]
license = "Apache-2.0"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
